fix: fixed style images, the image was stretched in height

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ header {
 
 .circle{
     border-radius: 50%;
+    height: auto;
 }
 header .down {
     display: inline-block;
